log
srcs/builtins_cd.c:24:35: error: incompatible pointer types passing 'char **' to parameter of type 't_node **' (aka 'struct s_node **') [-Werror,-Wincompatible-pointer-types]
        set_env("OLDPWD", oldpwd, envp);
                                  ^~~~
srcs/builtins_cd.c:3:54: note: passing argument to parameter 'envp' here
static int set_env(char *name, char *value, t_node **envp);
                                                     ^
srcs/builtins_cd.c:25:29: error: incompatible pointer types passing 'char **' to parameter of type 't_node **' (aka 'struct s_node **') [-Werror,-Wincompatible-pointer-types]
        set_env("PWD", pwd, envp);
                            ^~~~
srcs/builtins_cd.c:3:54: note: passing argument to parameter 'envp' here
static int set_env(char *name, char *value, t_node **envp);
                                                     ^
2 errors generated.
make: *** [minishell] Error 1
